# aubo_ros2_driver

./: .gitmodules  README.md  aubo_ros2.repos
aubo_bringup/: CMakeLists.txt  package.xml
aubo_bringup/launch/: aubo.launch.py  aubo_planning.launch.py  aubo_servoing.launch.py  joy_servo_teleop.launch.py
aubo_controllers/: CMakeLists.txt  README.md  controller_plugins.xml  package.xml
aubo_controllers/include/aubo_controllers/: gpio_controller.hpp
aubo_controllers/src/: gpio_controller.cpp  gpio_controller_parameters.yaml
aubo_dashboard_msgs/: CMakeLists.txt  package.xml
aubo_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
aubo_description/config/: agv_base_frame.yaml  base_frame.yaml  fake_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_cpp.yaml  ompl_planning.yaml  ros2_controllers.yaml
aubo_description/gazebo/: aubo.gazebo.xacro
aubo_description/launch/: aubo_viewer.launch.py
aubo_description/meshes/aubo_C3/collision/: link0.STL  link1.STL  link2.STL  link4.STL  link6.STL
aubo_description/meshes/aubo_C3/visual/: link0.3ds  link0.DAE  link1.3ds  link1.DAE  link2.3ds  link3.3ds  link3.DAE  link4.3ds  link5.3ds  link6.3ds  link6.DAE
aubo_description/meshes/aubo_C5/collision/: link0.STL  link1.STL  link3.STL  link6.STL
aubo_description/meshes/aubo_C5/visual/: link0.3ds  link1.3ds  link2.3ds  link3.3ds  link4.3ds  link5.3ds  link6.3ds
aubo_description/meshes/aubo_ES3/collision/: link0.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
aubo_description/meshes/aubo_ES3/visual/: link0.3ds  link0.DAE  link1.3ds  link1.DAE  link2.3ds  link2.DAE  link3.3ds  link3.DAE  link4.DAE  link5.3ds  link5.DAE  link6.DAE
aubo_description/meshes/aubo_ES5/collision/: link0.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
aubo_description/meshes/aubo_ES5/visual/: link0.3ds  link0.DAE  link1.3ds  link1.DAE  link2.3ds  link2.DAE  link3.3ds  link3.DAE  link4.3ds  link4.DAE  link5.DAE  link6.3ds  link6.DAE
aubo_description/meshes/aubo_i3/collision/: link3.STL  link5.STL
aubo_description/meshes/aubo_i3/visual/: link0.3ds  link0.DAE  link1.3ds  link1.DAE  link2.3ds  link2.DAE  link3.3ds  link3.DAE  link4.3ds  link4.DAE  link5.3ds  link5.DAE  link6.3ds  link6.DAE
aubo_description/meshes/aubo_i5/collision/: link2.STL  link4.STL  link5.STL
aubo_description/meshes/aubo_i5/visual/: link0.3ds  link0.DAE  link1.3ds  link1.DAE  link2.3ds  link2.DAE  link3.3ds  link3.DAE  link4.3ds  link4.DAE  link5.3ds  link5.DAE  link6.DAE
aubo_description/meshes/thirdparts/: EG2-4BX.STL
aubo_description/moveit2/: aubo_joint_limits.yaml  aubo_moveit2_pose_tracking_config.yaml  aubo_moveit2_servo_config.yaml  aubo_moveit_controller_config.yaml  bio_ik_kinematics.yaml  chomp_planning.yaml  kinematics.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  planning_pipelines_config.yaml  trac_ik_kinematics.yaml
aubo_description/rviz/: aubo.rviz  moveit.rviz  servo_rviz_config.rviz
aubo_description/srdf/: aubo.srdf.xacro  aubo_macro.srdf.xacro
aubo_description/urdf/: aubo.ros2_control.xacro  aubo.urdf.xacro  aubo_C3.urdf  aubo_C3.xacro  aubo_C5.urdf  aubo_ES3.urdf  aubo_ES3.xacro  aubo_ES5.urdf  aubo_ES5.xacro  aubo_i5.urdf  aubo_i5.xacro  aubo_realsense.urdf.xacro
aubo_description/urdf/thirdparts/: aubo_d435_camera.urdf.xacro
aubo_gazebo/: CMakeLists.txt  package.xml
aubo_gazebo/config/: aubo_controllers.yaml
aubo_gazebo/launch/: aubo_gazebo.launch.py
aubo_hardware/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
aubo_hardware/config/: aubo_controllers.yaml  test_goal_publishers_config.yaml
aubo_hardware/include/: aubo_hardware_interface.h
aubo_hardware/launch/: aubo_control.launch.py  aubo_test_joint_trajectory_controller.launch.py
aubo_hardware/src/: aubo_hardware_interface.cpp  aubo_ros2_control_node.cpp
aubo_moveit2/: CMakeLists.txt  package.xml
aubo_moveit2/src/: joystick_servo.cpp  joystick_servo_agv.cpp
aubo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aubo_moveit_config/config/: aubo_i5.srdf.xacro  aubo_i5_macro.srdf.xacro  aubo_iS7_CM02.srdf  aubo_robot.srdf  joint_limits.yaml  kinematics(old).yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning(old).yaml  ompl_planning.yaml  view_robot.rviz
aubo_moveit_config/launch/: aubo_moveit.launch.py  demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
aubo_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
aubo_msgs/msg/: IOStates.msg  MasterboardDataMsg.msg  ToolDataMsg.msg
aubo_msgs/srv/: SetIO.srv  SetPayload.srv
aubo_msgs/srv/modbus/: AddSignal.srv  DeleteSignal.srv  GetSignalStatus.srv  SetOutputSignal.srv  SetSignalUpdateFrequency.srv
aubo_ros2_driver/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
aubo_ros2_driver/config/: aubo_controllers.yaml
aubo_ros2_driver/include/: aubo_hardware_interface.h  aubo_hardware_interface.hpp
aubo_ros2_driver/launch/: aubo_control.launch.py
aubo_ros2_driver/src/: aubo_hardware_interface.cpp  aubo_ros2_control_node.cpp
ros_joints_plan/: CMakeLists.txt  package.xml
ros_joints_plan/launch/: joints_plan.launch.py
ros_joints_plan/src/: joints_planning.cpp
