<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aubo_controllers</name>
  <version>1.0.0</version>
  <description>Provides controllers that use the speed scaling interface of AUBO Robots.</description>

  <maintainer email="zhangduo@aubo-robotics.cn">zhangduo</maintainer>

  <license>BSD-3-Clause</license>


  <author email="zhangduo@aubo-robotics.cn">zhangduo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>controller_interface</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>lifecycle_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcutils</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>aubo_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
