<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aubo_msgs</name>
  <version>1.0.0</version>
  <description>Message and service definitions for interacting with AUBO Robots robot controllers.</description>
  <maintainer email="zhangduo@aubo-robotics.cn">ZhangDuo</maintainer>

  <license>BSD-3-Clause</license>

  <author>ZhangDuo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <rosindex>
      <tags>
        <tag>messages</tag>
        <tag>ros-industrial</tag>
        <tag>services</tag>
        <tag>aubo_robot</tag>
      </tags>
    </rosindex>
    <ros_industrial>
      <support_level value="community" />
    </ros_industrial>
    <build_type>ament_cmake</build_type>
  </export>
</package>
